# harmony_soc

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/hal_ble/: CMakeLists.txt  hal_ble.c
components/hal_ble/include/: hal_ble.h
components/hal_ezos/: CMakeLists.txt  ezos.h  ezos_freertos.c
components/hal_platform/: CMakeLists.txt  hal_platform.c
components/hal_platform/include/: hal_platform.h
components/hal_uart/: CMakeLists.txt  hal_uart.c
components/hal_uart/include/: hal_uart.h
components/hal_wifi/: CMakeLists.txt  hal_wifi.c
components/hal_wifi/include/: hal_wifi.h
components/third_libs/: CMakeLists.txt
components/third_libs/monitor/: monitor.c  monitor.h
components/third_libs/third_list/: utils_list.c  utils_list.h
components/third_libs/tlv_protocol/: readme.md  tlv_protocol.c  tlv_protocol.h
main/: CMakeLists.txt  harmony_soc_main.c
main/app_handler/: app_handler.c  app_handler.h  app_handler_uart.c
main/huawei_iot/: huawei_iot.c
